--- a/public/email-bagis-sonrasi.html
+++ b/public/email-bagis-sonrasi.html
@@ -474,7 +474,7 @@ body { font-family: Helvetica Neue, Arial, Helvetica, Geneva, sans-serif; }
 }
 
 .call-to-action{
-  margin: 30px auto;
+  margin: 20px auto;
   text-align: center;
   display: block;
 }
@@ -588,7 +588,6 @@ body { font-family: Helvetica Neue, Arial, Helvetica, Geneva, sans-serif; }
 						<tr>
 							<td width="580" class="w580" class="benvarim-mail-content" >
 								<div align="left" class="article-content">
-									<span class="cs-el-wrap">
 									<img class="img-right" alt="Resim" src="http://s3.amazonaws.com/benvarim-bucket-prod-2/organizations/logos/22/thumb/resim.jpg?1313773104" />
 									<p>
 										Sevgili Onur Guleryuz,
@@ -596,30 +595,20 @@ body { font-family: Helvetica Neue, Arial, Helvetica, Geneva, sans-serif; }
 									<p>
 										Kutay Üstüner tarafından Aydın Bir Türkiye İçin Elele için oluşturulan Cumhuriyet Bayramımızı Eğitimi Destekleyerek Kutlayalım! sayfasında yapmış olduğunuz bağış için <a href="#">Turkish Educational Foundation (ABD)</a> adına teşekkür ederiz. Bağışınız, Turkish Educational Foundation (ABD) banka hesaplarına güvenle ulaşmıştır.
 									</p>
-
-									<div class="benvarim-gallery">
-
-
-
-
-
-
-
-									</div><!-- benvarim-gallery -->
 									<p>
 										Verilen desteği artırmak ve hedeflerine ulaşmalarını sağlamak için, sayfayı Facebook, Twitter gibi sosyal ağlarda paylaşabilir, eposta yoluyla çevrenize ileterek, daha fazla bağış yapılmasını rica edebilirsiniz.
 									</p>
+
 									<p class="call-to-action">
 									  <a href="#" class="button yellow large">Arkadaşlarını davet et</a>
 									</p>
 
-									</span>
 								</div>
 							</td><!-- .benvarim-mail-content -->
 						</tr>
 						<tr>
 							<td width="580" class="w580">
-								<div align="left" class="article-content" style="margin-top: 20px">
+								<div align="left" class="article-content" style=" ">
 									<span class="cs-el-wrap">
 							      <p>Sevgiler,<br/><img src="images/benvarim-platformu.png" width="177" height="24" style="padding-top: 5px"/></p>
 							    </span>
