--- a/public/footer_container.html
+++ b/public/footer_container.html
@@ -25,9 +25,15 @@
             style="border:0; height:260px; width:100%;" class="rc" scrolling="no"></iframe>
           </div>
           <div class="f-facebook size1of2 lastUnit">
+            <iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2FBenVarim.Platformu&amp;width=210&amp;height=258&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false&amp;appId=116309391796241" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:210px; height:258px; background: #FFF !important; margin-left: 10px" allowTransparency="true" class="rc"></iframe>
+
+
+            <!--
             <div id="fb-root"></div>
 
             <div class="fb-like-box" data-href="http://www.facebook.com/benvarim.platformu" data-width="210" data-show-faces="true" data-border-color="#FFF" data-stream="false" data-header="false"></div>
+
+            -->
           </div>
         </div>
       </div>
