replace all urls w/ ssl

--- a/public/email-bagis-sonrasi.html
+++ b/public/email-bagis-sonrasi.html
@@ -534,7 +534,7 @@ body { font-family: Helvetica Neue, Arial, Helvetica, Geneva, sans-serif; }
 		<tbody>
 		<tr>
 			<td width="640" height="20" class="w640">
-				<img src="http://benvarim.com/images/v2/footer-logo.png" height="37px" width="172px" style="padding: 20px 0 10px">
+				<img src="https://www.benvarim.com/images/v2/footer-logo.png" height="37px" width="172px" style="padding: 20px 0 10px">
 			</td>
 		</tr>
 		<tr>
@@ -588,7 +588,7 @@ body { font-family: Helvetica Neue, Arial, Helvetica, Geneva, sans-serif; }
 						<tr>
 							<td width="580" class="w580" class="benvarim-mail-content" >
 								<div align="left" class="article-content">
-									<img class="img-right" alt="Resim" src="http://s3.amazonaws.com/benvarim-bucket-prod-2/organizations/logos/22/thumb/resim.jpg?1313773104" />
+									<img class="img-right" alt="Resim" src="https://s3.amazonaws.com/benvarim-bucket-prod-2/organizations/logos/22/thumb/resim.jpg?1313773104" />
 									<p>
 										Sevgili Onur Guleryuz,
 									</p>
@@ -647,10 +647,10 @@ body { font-family: Helvetica Neue, Arial, Helvetica, Geneva, sans-serif; }
 				  <td>
           <div class="line align-center social-links ">
             <div class="size1of2" style="font-size: 14px;">
-					    <img src="http://benvarim.com/images/social_media_mini_icons/png/facebook.png" style="display:inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; font-size: 14px;"/><a href="http://www.facebook.com/BenVarim.Platformu" >Facebook'ta beğen: BenVarım Platformu</a>
+					    <img src="https://www.benvarim.com/images/social_media_mini_icons/png/facebook.png" style="display:inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; font-size: 14px;"/><a href="https://www.facebook.com/BenVarim.Platformu" >Facebook'ta beğen: BenVarım Platformu</a>
             </div>
             <div class="size1of2 lastUnit" style="font-size: 14px;">
-					    <img src="http://benvarim.com/images/social_media_mini_icons/png/twitter.png"  style="display:inline-block; margin-right: 5px; line-height: 16px; vertical-align: top;"/><a href="http://twitter.com/Ben_Varim">Twitter'da takip et: @Ben_Varim</a>
+					    <img src="https://www.benvarim.com/images/social_media_mini_icons/png/twitter.png"  style="display:inline-block; margin-right: 5px; line-height: 16px; vertical-align: top;"/><a href="https://twitter.com/Ben_Varim">Twitter'da takip et: @Ben_Varim</a>
             </div>
             </td>
 				</tr>
@@ -682,9 +682,9 @@ body { font-family: Helvetica Neue, Arial, Helvetica, Geneva, sans-serif; }
 		</tr>
 		<tr>
 			<td width="640" height="60" class="w640" style="text-align: center; font-size: 13px;">
-	      <a href="http://benvarim.com" target="_blank">http://benvarim.com</a><br/>
+	      <a href="https://www.benvarim.com" target="_blank">https://www.benvarim.com</a><br/>
 	      <p>Daha iyi yarınlar yaratmak adına gösterdiğiniz çaba için teşekkür ederiz.</p>
-	      <p><a href="http://benvarim.com/guvenli_odeme" target="_blank">%100 Güvenli Ödeme Sistemi</a> | <a href="http://benvarim.com/sik_sorulan_sorular" target="_blank">Sık sorulan sorular</a> | <a href="http://benvarim.com/gizlilik_politikasi" target="_blank">Gizlilik Politikası</a> | <a href="http://benvarim.com/iletisim/yeni" target="_blank">Bize ulaşın</a></p>
+	      <p><a href="https://www.benvarim.com/guvenli_odeme" target="_blank">%100 Güvenli Ödeme Sistemi</a> | <a href="https://www.benvarim.com/sik_sorulan_sorular" target="_blank">Sık sorulan sorular</a> | <a href="https://www.benvarim.com/gizlilik_politikasi" target="_blank">Gizlilik Politikası</a> | <a href="https://www.benvarim.com/iletisim/yeni" target="_blank">Bize ulaşın</a></p>
         <p><br/></p>
 	    </td>
 		</tr>
