--- a/public/email-compiled.html
+++ b/public/email-compiled.html
@@ -79,7 +79,7 @@ h6 a:visited { color: 777 !important; }
 		<table width="640" cellspacing="0" cellpadding="0" border="0" class="w640" style="width: 640px !important;"><tbody>
 <tr style="border-collapse: collapse;">
 <td width="640" height="20" class="w640" style="width: 300px !important; border-collapse: collapse;">
-				<img src="http://benvarim.com/images/v2/footer-logo.png" height="37px" width="172px" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; padding: 20px 0 10px;">
+				<img src="https://www.benvarim.com/images/v2/footer-logo.png" height="37px" width="172px" style="height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; padding: 20px 0 10px;">
 </td>
 		</tr>
 <tr style="border-collapse: collapse;">
@@ -122,10 +122,10 @@ h6 a:visited { color: 777 !important; }
 <td style="border-collapse: collapse;">
           <div class="line align-center social-links " style="*zoom: 1; text-align: center; margin: 0 auto; padding: 10px 0 10px 30px;" align="center">
             <div class="size1of2" style="font-size: 14px; float: left; width: 50%;">
-					    <img src="http://benvarim.com/images/social_media_mini_icons/png/facebook.png" style="display: inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; font-size: 14px; height: auto; outline: none; text-decoration: none;"><a href="http://www.facebook.com/BenVarim.Platformu" style="color: #318FD1; text-decoration: none; font-weight: bold;">Facebook'ta beğen: BenVarım Platformu</a>
+					    <img src="https://www.benvarim.com/images/social_media_mini_icons/png/facebook.png" style="display: inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; font-size: 14px; height: auto; outline: none; text-decoration: none;"><a href="https://www.facebook.com/BenVarim.Platformu" style="color: #318FD1; text-decoration: none; font-weight: bold;">Facebook'ta beğen: BenVarım Platformu</a>
             </div>
             <div class="size1of2 lastUnit" style="font-size: 14px; float: none; width: auto; display: table-cell; *display: block; *zoom: 1; _position: relative; _left: -3px; _margin-right: -3px;">
-					    <img src="http://benvarim.com/images/social_media_mini_icons/png/twitter.png" style="display: inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; height: auto; outline: none; text-decoration: none;"><a href="http://twitter.com/Ben_Varim" style="color: #318FD1; text-decoration: none; font-weight: bold;">Twitter'da takip et: @Ben_Varim</a>
+					    <img src="https://www.benvarim.com/images/social_media_mini_icons/png/twitter.png" style="display: inline-block; margin-right: 5px; line-height: 16px; vertical-align: top; height: auto; outline: none; text-decoration: none;"><a href="https://twitter.com/Ben_Varim" style="color: #318FD1; text-decoration: none; font-weight: bold;">Twitter'da takip et: @Ben_Varim</a>
             </div>
             </div>
 </td>
@@ -151,8 +151,8 @@ h6 a:visited { color: 777 !important; }
 		</tr>
 <tr style="border-collapse: collapse;">
 <td width="640" height="60" class="w640" style="text-align: center; font-size: 13px; width: 300px !important; border-collapse: collapse;" align="center">
-	      <a href="http://benvarim.com" target="_blank" style="color: #0862a2;">http://benvarim.com</a><br style="line-height: 100%;"><p>Daha iyi yarınlar yaratmak adına gösterdiğiniz çaba için teşekkür ederiz.</p>
-	      <p><a href="http://benvarim.com/guvenli_odeme" target="_blank" style="color: #0862a2;">%100 Güvenli Ödeme Sistemi</a> | <a href="http://benvarim.com/sik_sorulan_sorular" target="_blank" style="color: #0862a2;">Sık sorulan sorular</a> | <a href="http://benvarim.com/gizlilik_politikasi" target="_blank" style="color: #0862a2;">Gizlilik Politikası</a> | <a href="http://benvarim.com/iletisim/yeni" target="_blank" style="color: #0862a2;">Bize ulaşın</a></p>
+	      <a href="https://www.benvarim.com" target="_blank" style="color: #0862a2;">https://www.benvarim.com</a><br style="line-height: 100%;"><p>Daha iyi yarınlar yaratmak adına gösterdiğiniz çaba için teşekkür ederiz.</p>
+	      <p><a href="https://www.benvarim.com/guvenli_odeme" target="_blank" style="color: #0862a2;">%100 Güvenli Ödeme Sistemi</a> | <a href="https://www.benvarim.com/sik_sorulan_sorular" target="_blank" style="color: #0862a2;">Sık sorulan sorular</a> | <a href="https://www.benvarim.com/gizlilik_politikasi" target="_blank" style="color: #0862a2;">Gizlilik Politikası</a> | <a href="https://www.benvarim.com/iletisim/yeni" target="_blank" style="color: #0862a2;">Bize ulaşın</a></p>
         <p><br style="line-height: 100%;"></p>
 	    </td>
 		</tr>
