--- a/public/footer_container.html
+++ b/public/footer_container.html
@@ -31,7 +31,7 @@
             <!--
             <div id="fb-root"></div>
 
-            <div class="fb-like-box" data-href="http://www.facebook.com/benvarim.platformu" data-width="210" data-show-faces="true" data-border-color="#FFF" data-stream="false" data-header="false"></div>
+            <div class="fb-like-box" data-href="https://www.facebook.com/benvarim.platformu" data-width="210" data-show-faces="true" data-border-color="#FFF" data-stream="false" data-header="false"></div>
 
             -->
           </div>
@@ -79,7 +79,7 @@
     if (!jqueryLoaded) {
         var script = document.createElement('script');
         script.type = 'text/javascript';
-        script.src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
+        script.src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
         head.appendChild(script);
         if (script.readyState && script.onload!==null){
             script.onreadystatechange= function () {
@@ -89,7 +89,7 @@
     }
     var script = document.createElement('script');
     script.type = 'text/javascript';
-    script.src = 'http://downloads.mailchimp.com/js/jquery.form-n-validate.js';
+    script.src = 'https://downloads.mailchimp.com/js/jquery.form-n-validate.js';
     head.appendChild(script);
     var err_style = '';
     try{
