--- a/public/twitter.html
+++ b/public/twitter.html
@@ -1,4 +1,4 @@
-<script src="http://widgets.twimg.com/j/2/widget.js"></script>
+<script src="https://widgets.twimg.com/j/2/widget.js"></script>
 <script>
 new TWTR.Widget({
   version: 2,
