host mailchipm jquery

--- a/public/footer_container.html
+++ b/public/footer_container.html
@@ -89,7 +89,7 @@
     }
     var script = document.createElement('script');
     script.type = 'text/javascript';
-    script.src = 'https://downloads.mailchimp.com/js/jquery.form-n-validate.js';
+    script.src = '/javascripts/jquery.form-n-validate.js';
     head.appendChild(script);
     var err_style = '';
     try{
